# delivery-lateness-prediction

./: .env.sample  .gitignore  Makefile  README.md  docker-compose.yml  predict.py  pyproject.toml  requirements.txt  train.py
data/: delivery_trips.csv
docker/: Dockerfile
notebooks/: eda.ipynb
src/: __init__.py  config.py
src/api/: __init__.py  app.py
src/data/: __init__.py  loader.py  validation.py
src/features/: __init__.py  engineering.py  preprocessing.py
src/models/: __init__.py  evaluate.py  registry.py  train.py
src/utils/: __init__.py  logger.py
